--- a/home/config/atlassian/atlas/plugins-installed.toml
+++ b/home/config/atlassian/atlas/plugins-installed.toml
@@ -1,9 +1,9 @@
 [[plugin]]
   name = "shipyard"
   summary = "Manage artifacts stored in Shipyard"
-  version = "v2.8.0-5-g171ea4c"
+  version = "v2.8.0-10-g56f8c73"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/shipyard"
+  exec = "~/.local/share/atlassian/atlas/plugin/shipyard"
   channel = "stable"
 
 [[plugin]]
@@ -17,17 +17,17 @@
 [[plugin]]
   name = "statlas"
   summary = "Statlas auth and upload cli"
-  version = "build-210-23aefaf"
+  version = "build-226-3985918"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/statlas"
+  exec = "~/.local/share/atlassian/atlas/plugin/statlas"
   channel = "stable"
 
 [[plugin]]
   name = "micros"
   summary = "Micros plugin for atlas-cli"
-  version = "203-af05907"
+  version = "205-4fcbbbf"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/micros"
+  exec = "~/.local/share/atlassian/atlas/plugin/micros"
   channel = "stable"
 
 [[plugin]]
@@ -49,9 +49,9 @@
 [[plugin]]
   name = "asap"
   summary = "ASAP Key management, ASAP requests, and token generation & validation"
-  version = "build-299-5666c48"
+  version = "build-323-bd4a3d6"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/asap"
+  exec = "~/.local/share/atlassian/atlas/plugin/asap"
   channel = "stable"
 
 [[plugin]]
@@ -73,17 +73,17 @@
 [[plugin]]
   name = "poco"
   summary = "Poco plugin for atlas-cli"
-  version = "build-502-dd80cb9"
+  version = "build-530-71d38c2"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/poco"
+  exec = "~/.local/share/atlassian/atlas/plugin/poco"
   channel = "stable"
 
 [[plugin]]
   name = "spin"
   summary = "Plugin for Spinnaker"
-  version = "0.6.0-788f898-118"
+  version = "0.6.1-37a3803-alpha"
   sha256 = ""
-  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/spin"
+  exec = "~/.local/share/atlassian/atlas/plugin/spin"
   channel = "stable"
 
 [[plugin]]
@@ -107,5 +107,5 @@
   summary = "Plugin for atlas-cli developers"
   version = "0.0-648-g466e74f"
   sha256 = ""
-  exec = "~/.local/share/atlassian/atlas/plugin/atlasdev"
+  exec = "/home/jspence2/.local/share/atlassian/atlas/plugin/atlasdev"
   channel = "stable"
