--- a/home/ssh/config
+++ b/home/ssh/config
@@ -17,6 +17,10 @@ Host bitbucket.org stash.atlassian.com
 Host github.com
   IdentityFile ~/.ssh/keys/github.key
 
+Host homeassistant.local
+  IdentityFile ~/.ssh/keys/rpi.key
+  User root
+
 Host *
   AddKeysToAgent yes
   Compression yes
